Reuse terminology for gamma_S

--- a/text/safrole.tex
+++ b/text/safrole.tex
@@ -78,7 +78,7 @@ Here, $\safroleticket$ is used to denote the set of \emph{tickets}, a combinatio
   }
 \end{align}
 
-As we state in section \ref{sec:sealandentropy}, Safrole requires that every block header $\H$ contain a valid seal $\H_\¬sealsig$, which is a Bandersnatch signature produced with the private key corresponding to the entry at index $m$ of the current epoch's seal-key series, present in state as $\sealtickets$.
+As we state in section \ref{sec:sealandentropy}, Safrole requires that every block header $\H$ contain a valid seal $\H_\¬sealsig$, which is a Bandersnatch signature produced with the private key corresponding to the entry at index $m$ of the current epoch's slot-sealer series $\sealtickets$.
 
 
 
