Furter adjustments: use slot-sealer term consistently

--- a/text/best_chain.tex
+++ b/text/best_chain.tex
@@ -25,7 +25,7 @@ Formally:
   }
 \end{align}
 
-Of these acceptable blocks, that which contains the most ancestor blocks whose author used a seal-key ticket, rather than a fallback key should be selected as the best head, and thus the chain on which the participant should make \textsc{Grandpa} votes.
+Of these acceptable blocks, that which contains the most ancestor blocks whose author used a slot-sealer ticket, rather than a fallback key should be selected as the best head, and thus the chain on which the participant should make \textsc{Grandpa} votes.
 
 Formally, we aim to select $\block^\best$ to maximize the value $m$ where:
 \begin{equation}
