removed p \ne \none \wedge
Suggested by 0xjunha -- Makes sense as p is only appropriate for refine/WPs

--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -358,7 +358,7 @@ Other than the gas-counter which is explicitly defined, elements of \textsc{pvm}
       p_\wp¬workitems[\registers_{11}]_\wi¬payload &\when p \ne \none \wedge \registers_{10} = 13 \wedge \registers_{11} < \len{p_\wp¬workitems} \\
       \encode{\var{\mathbf{i}}} &\when \mathbf{i} \ne \none \wedge \registers_{10} = 14 \\
       \encode{\mathbf{i}[\registers_{11}]} &\when \mathbf{i} \ne \none \wedge \registers_{10} = 15 \wedge \registers_{11} < \len{\mathbf{i}} \\
-      \encode{\mathbf{H}} &\when p \ne \none \wedge \registers_{10} = 16 \\
+      \encode{\mathbf{H}} &\when \registers_{10} = 16 \\
       \none &\otherwise
     \end{cases} \\
     \using o &= \registers_7 \\
