Fixes a typo in Eq 10.6 defining faults for the E_D extrinsic.

--- a/text/judgments.tex
+++ b/text/judgments.tex
@@ -62,8 +62,8 @@ Offender signatures must be similarly valid and reference work-reports with judg
   }\\
   \forall \tup{\xf¬reporthash, \xf¬validity, \xf¬offenderindex, \xf¬signature} &\in \xtfaults : \bigwedge \abracegroup{
     &\xf¬reporthash \in \badset' \Leftrightarrow \xf¬reporthash \not\in \goodset' \Leftrightarrow \xf¬validity \,,\\
-    &k \in \mathbf{k} \,,\\
-    &s \in \edsignature{\xf¬offenderindex}{\mathsf{X}\sub{v} \concat \xf¬reporthash}\\
+    &\xf¬offenderindex \in \mathbf{k} \,,\\
+    &\xf¬signature \in \edsignature{\xf¬offenderindex}{\mathsf{X}\sub{v} \concat \xf¬reporthash}\\
   }\\
   \nonumber\where \mathbf{k} &= \set{\build{i_\vk¬ed}{i \in \previousset \cup \activeset}} \setminus \offenders
 \end{align}
