--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -28,7 +28,7 @@ Beyond the production of blocks, incentivized honest behavior includes:
 
 \subsection{Segments and the Manifest}
 
-Our basic erasure-coding segment size is $\Cecpiecesize$ octets, derived from the fact we wish to be able to reconstruct even should almost two-thirds of our $\Cvalcount$ participants be malicious or incapacitated, the 16-bit Galois field on which the erasure-code is based and the desire to efficiently support encoding data of close to, but no less than, 4\textsc{kb}.
+Our basic erasure-coding segment size is $\Cecpiecesize = 684$ octets, derived from the fact we wish to be able to reconstruct even should almost two-thirds of our $\Cvalcount = 1023$ participants be malicious or incapacitated, the 16-bit Galois field on which the erasure-code is based and the desire to efficiently support encoding data of close to, but no less than, 4\textsc{kb}.
 
 Work-packages are generally small to ensure guarantors need not invest a lot of bandwidth in order to discover whether they can get paid for their evaluation into a work-report. Rather than having much data inline, they instead \emph{reference} data through commitments. The simplest commitments are extrinsic data.
 
